(#1549) - index method for leveldb

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bluebird": "~1.0.0",
     "inherits": "~2.0.1",
+    "level-delete-stream": "0.0.1",
     "level-sublevel": "~5.2.0",
     "leveldown": "~0.10.2",
     "levelup": "~0.18.2",
@@ -57,7 +58,7 @@
     "publish": "./bin/publish.sh",
     "publish-site": "./bin/publish-site.sh",
     "build-site": "./bin/build-site.sh",
-    "shell": "./bin/repl.js"  
+    "shell": "./bin/repl.js"
   },
   "browser": {
     "./adapters/leveldb": false,
